; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_st.c_switch_partition.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_st.c_switch_partition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_tape = type { i64, i64, %struct.st_partstat* }
%struct.st_partstat = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scsi_tape*)* @switch_partition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @switch_partition(%struct.scsi_tape* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.scsi_tape*, align 8
  %4 = alloca %struct.st_partstat*, align 8
  store %struct.scsi_tape* %0, %struct.scsi_tape** %3, align 8
  %5 = load %struct.scsi_tape*, %struct.scsi_tape** %3, align 8
  %6 = getelementptr inbounds %struct.scsi_tape, %struct.scsi_tape* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.scsi_tape*, %struct.scsi_tape** %3, align 8
  %9 = getelementptr inbounds %struct.scsi_tape, %struct.scsi_tape* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %7, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %37

13:                                               ; preds = %1
  %14 = load %struct.scsi_tape*, %struct.scsi_tape** %3, align 8
  %15 = getelementptr inbounds %struct.scsi_tape, %struct.scsi_tape* %14, i32 0, i32 2
  %16 = load %struct.st_partstat*, %struct.st_partstat** %15, align 8
  %17 = load %struct.scsi_tape*, %struct.scsi_tape** %3, align 8
  %18 = getelementptr inbounds %struct.scsi_tape, %struct.scsi_tape* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %16, i64 %19
  store %struct.st_partstat* %20, %struct.st_partstat** %4, align 8
  %21 = load %struct.st_partstat*, %struct.st_partstat** %4, align 8
  %22 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %13
  %26 = load %struct.st_partstat*, %struct.st_partstat** %4, align 8
  %27 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  br label %28

28:                                               ; preds = %25, %13
  %29 = load %struct.scsi_tape*, %struct.scsi_tape** %3, align 8
  %30 = load %struct.st_partstat*, %struct.st_partstat** %4, align 8
  %31 = getelementptr inbounds %struct.st_partstat, %struct.st_partstat* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load %struct.scsi_tape*, %struct.scsi_tape** %3, align 8
  %34 = getelementptr inbounds %struct.scsi_tape, %struct.scsi_tape* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = call i32 @set_location(%struct.scsi_tape* %29, i64 %32, i64 %35, i32 1)
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %28, %12
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @set_location(%struct.scsi_tape*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
